# A-STOCK-DATA

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9fef2ee85dab_initial_schema.py  a7c3d1e8f2b4_add_sector_limit_up_heat.py  b8e4f7a3c1d9_add_kpl_tables.py  c2f5d8b1a3e7_fix_lhb_seat_id.py  d4a8e5c9b2f1_add_kpl_sectors_heat.py  e6f9a2c4d8b3_add_kpl_sector_ladder.py  ebb7225fb4c3_add_stock_sectors_table.py  f3b7a9d2e1c5_add_kpl_phase2.py  f44eb6bd19c6_add_journal_tables_trading_review_master.py  g8c4e7f2a9d1_add_kpl_phase3.py
backend/scripts/: backfill_recent.py
backend/src/stockdata/: __init__.py  config.py  crud.py  db.py  main.py  models.py
backend/src/stockdata/analytics/: limit.py  rankings.py
backend/src/stockdata/api/: dashboard.py  intraday.py  jobs.py  journal.py  kaipanla.py  limit_down.py  limit_up.py  ocr.py  quotes.py  rankings.py  schemas.py  sectors.py  stock_sectors.py  stocks.py
backend/src/stockdata/jobs/: cleanup.py  daily.py  industry_slow.py  kaipanla.py  realtime_snapshot.py  scheduler.py  weekly.py
backend/src/stockdata/providers/: __init__.py  base.py  eastmoney.py  kaipanla.py  tushare_provider.py
backend/src/stockdata/services/: manual_sectors.py  ocr.py  uploads.py
docs/: agent-replay.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
(+18 files in other folders)
